Revert "refactor: make bootc image"
This reverts commit f6489961476d658a904a75e3845859ecf1dcd754.

--- a/.github/workflows/build-mack.yml
+++ b/.github/workflows/build-mack.yml
@@ -104,14 +104,10 @@ jobs:
           containerfiles: |
             ./images/mack/Containerfile
           context: images/mack
-          extra-args: |
-            --cap-add=all
-            --device=/dev/fuse
-            --security-opt=label=type:container_runtime_t
           image: ${{ env.IMAGE_NAME }}
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
-          oci: true
+          oci: false
           platforms: ${{ env.PLATFORM }}
 
       - name: Login to GitHub Container Registry
