--- a/images/mack/Containerfile
+++ b/images/mack/Containerfile
@@ -3,7 +3,7 @@ FROM scratch AS ctx
 COPY build_files /
 
 # This is the base image.
-FROM quay.io/fedora/fedora-bootc:42@sha256:8b6f28ea84e1dbcdf17115f85464582f3ba4939c754c763497f5cfea6a79f39e
+FROM quay.io/fedora/fedora-bootc:42
 
 ARG TARGETPLATFORM
 
