--- a/renovate.json
+++ b/renovate.json
@@ -205,7 +205,8 @@
       "enabled": false,
       "groupName": "no-pin",
       "matchUpdateTypes": [
-        "pin"
+        "pin",
+        "pinDigest"
       ],
       "matchPackageNames": [
         "mcr.microsoft.com/devcontainers/python",
