--- a/renovate.json
+++ b/renovate.json
@@ -210,6 +210,7 @@
       ],
       "matchPackageNames": [
         "mcr.microsoft.com/devcontainers/python",
+        "python",
         "quay.io/fedora/fedora-bootc"
       ]
     },
