--- a/kustomization/overlays/prod/dns/configmap/blocky/config.yml
+++ b/kustomization/overlays/prod/dns/configmap/blocky/config.yml
@@ -67,6 +67,7 @@ customDNS:
     worker02.hogs.tswn.us: 10.11.0.105
     worker03.hogs.tswn.us: 10.11.0.106
     paperless-samba.hogs.tswn.us: 10.11.1.32
+    postgress.homeassistant.hogs.tswn.us: 10.11.1.33
     traefik.hogs.tswn.us: 10.11.1.64
     unifi-inform.tswn.us: 10.11.1.65
     unifi.shawnwilsher.net: 10.11.1.65 # Controllers point devices to this still...
@@ -97,6 +98,7 @@ customDNS:
     luxor.hogs.tswn.us: 10.117.0.22
     monitor.house.gem.hogs.tswn.us: 10.117.0.24
     fdm01.hogs.tswn.us: 10.117.0.26
+    homeassistant-appliance.hogs.tswn.us: 10.117.0.33
     hue.hogs.tswn.us: 10.117.0.34
     living-dash.hogs.tswn.us: 10.117.0.35
     office-bluetooth-proxy.hogs.tswn.us: 10.117.0.36
