--- a/kustomization/overlays/prod/external-services/kustomization.yml
+++ b/kustomization/overlays/prod/external-services/kustomization.yml
@@ -5,8 +5,10 @@ kind: Kustomization
 namespace: external-svc
 resources:
   - namespace.yml
+  - endpointslice/homeassistant.yml
   - endpointslice/nas.yml
   - endpointslice/opensprinkler.yml
   - ingress.yml
+  - service/homeassistant.yml
   - service/nas.yml
   - service/opensprinkler.yml
