feat: split out unifi package from other marinatedconcrete updates

--- a/renovate.json
+++ b/renovate.json
@@ -283,6 +283,12 @@
       "matchPackageNames": [
         "/^ghcr\\.io\\/haveagitgat\\/tdarr.*/"
       ]
+    },
+    {
+      "groupName": "marinatedconcrete Unifi Network Application Kustomize Component",
+      "groupSlug": "marinatedconcrete-kustomize-unifi-network-application",
+      "matchCurrentValue": "kustomize-unifi-network-application@**",
+      "matchPackageNames": ["marinatedconcrete/config"]
     }
   ],
   "separateMinorPatch": true
