feat: setup frigate+

--- a/kustomization/overlays/prod/homeassistant/patches/frigate/add_frigate_env_vars.yml
+++ b/kustomization/overlays/prod/homeassistant/patches/frigate/add_frigate_env_vars.yml
@@ -18,4 +18,9 @@ spec:
                 secretKeyRef:
                   name: frigate-secret
                   key: rtsp_password
+            - name: PLUS_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: frigate-secret
+                  key: api_key
           name: frigate
