feat: enable facial recognition in frigate

--- a/kustomization/overlays/prod/homeassistant/configmap/frigate/config.yml
+++ b/kustomization/overlays/prod/homeassistant/configmap/frigate/config.yml
@@ -53,6 +53,8 @@ detectors:
   coral:
     type: edgetpu
     device: usb
+face_recognition:
+  enabled: true
 go2rtc:
   rtsp:
     username: frigate
