feat: 7d2d component and experimental deployment

--- a/kustomization/overlays/prod/dns/configmap/blocky/config.yml
+++ b/kustomization/overlays/prod/dns/configmap/blocky/config.yml
@@ -126,6 +126,7 @@ customDNS:
     $ORIGIN tswn.us.
     $TTL 3600
 
+    7d2d-relic IN CNAME traefik.hogs
     alertmanager.hogs IN CNAME traefik.hogs
     argo-cd.hogs IN CNAME traefik.hogs
     atuin IN CNAME traefik.hogs
