feat: add a LoadBalancer IP for 7d2d-relic

--- a/kustomization/overlays/experimental/7d2d-relic/ingress.yml
+++ b/kustomization/overlays/experimental/7d2d-relic/ingress.yml
@@ -8,7 +8,7 @@ metadata:
   name: seven-days-to-die-ingress
 spec:
   rules:
-    - host: 7d2d-relic.tswn.us
+    - host: 7d2d-relic-admin.tswn.us
       http:
         paths:
           - backend:
