fix: Include `CROWDSEC_BYPASS_DB_VOLUME_CHECK`
This is needed, but wasn't obvious from the release notes.

--- a/kustomization/overlays/prod/crowdsec/deployment.yml
+++ b/kustomization/overlays/prod/crowdsec/deployment.yml
@@ -31,6 +31,8 @@ spec:
           env:
             - name: COLLECTIONS
               value: crowdsecurity/appsec-virtual-patching crowdsecurity/traefik gauth-fr/immich LePresidente/authelia sdwilsh/navidrome
+            - name: CROWDSEC_BYPASS_DB_VOLUME_CHECK
+              value: "1"
             - name: DB_PASSWORD
               valueFrom:
                 secretKeyRef:
