feat: add logical backup for nextcloud

--- a/plays/codegen/postgres-logical-backup.yml
+++ b/plays/codegen/postgres-logical-backup.yml
@@ -18,6 +18,7 @@
           - homeassistant
           - immich
           - monitoring
+          - nextcloud
           - paperless
           - traefik
     - name: Delete existing codegen
