--- a/kustomization/components/codegen-postgres-logical-backup/kustomization.yml
+++ b/kustomization/components/codegen-postgres-logical-backup/kustomization.yml
@@ -11,6 +11,7 @@ resources:
   - miniobucket/homeassistant.yml
   - miniobucket/immich.yml
   - miniobucket/monitoring.yml
+  - miniobucket/nextcloud.yml
   - miniobucket/paperless.yml
   - miniobucket/traefik.yml
   - miniopolicy/3d-printing.yml
@@ -19,6 +20,7 @@ resources:
   - miniopolicy/homeassistant.yml
   - miniopolicy/immich.yml
   - miniopolicy/monitoring.yml
+  - miniopolicy/nextcloud.yml
   - miniopolicy/paperless.yml
   - miniopolicy/traefik.yml
   - miniopolicybinding/3d-printing.yml
@@ -27,6 +29,7 @@ resources:
   - miniopolicybinding/homeassistant.yml
   - miniopolicybinding/immich.yml
   - miniopolicybinding/monitoring.yml
+  - miniopolicybinding/nextcloud.yml
   - miniopolicybinding/paperless.yml
   - miniopolicybinding/traefik.yml
   - miniouser/3d-printing.yml
@@ -35,5 +38,6 @@ resources:
   - miniouser/homeassistant.yml
   - miniouser/immich.yml
   - miniouser/monitoring.yml
+  - miniouser/nextcloud.yml
   - miniouser/paperless.yml
   - miniouser/traefik.yml
