feat: use NFS for nextcloud instead of longhorn

--- a/kustomization/overlays/experimental/nextcloud/kustomization.yml
+++ b/kustomization/overlays/experimental/nextcloud/kustomization.yml
@@ -16,5 +16,7 @@ resources:
   - namespace.yml
   - ingress.yml
   - middleware.yml
+  - persistentvolume.yml
+  - persistentvolumeclaim.yml
   - postgresql.yml
   - redis.yml
