docs: add a comment explaining that a line needs to be commented out on fresh install

--- a/kustomization/overlays/experimental/nextcloud/nextcloud-values.yml
+++ b/kustomization/overlays/experimental/nextcloud/nextcloud-values.yml
@@ -38,6 +38,7 @@ internalDatabase:
   enabled: false
 
 lifecycle:
+  # Note: on a clean install, this must be commented out!
   postStartCommand:
     - /bin/sh
     - -c
