--- a/kustomization/overlays/prod/traefik/configmap/authelia/config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia/config.yml
@@ -120,6 +120,7 @@ identity_providers:
           - groups
           - openid
           - profile
+          - quota
         token_endpoint_auth_method: client_secret_post
         userinfo_signed_response_alg: none
       # https://www.authelia.com/integration/openid-connect/opkssh/
