--- a/kustomization/overlays/prod/traefik/configmap/authelia/config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia/config.yml
@@ -86,8 +86,9 @@ identity_providers:
   oidc:
     claims_policies:
       nextcloud:
-        quota:
-          attribute: nextcloud_quota
+        custom_claims:
+          quota:
+            attribute: nextcloud_quota
     clients:
       - authorization_policy: two_factor
         client_id: brbyX~8fJ1lZxp1ixZ4M5XeEgyzxmc5C-BietrJdGT8Hjr1Fw1R42iPPh3Dq3XznSSuajcWG
