--- a/kustomization/overlays/experimental/nextcloud/nextcloud-values.yml
+++ b/kustomization/overlays/experimental/nextcloud/nextcloud-values.yml
@@ -50,7 +50,7 @@ lifecycle:
         --clientid="${OIDC_CLIENT_ID}" \
         --clientsecret="${OIDC_CLIENT_SECRET}" \
         --discoveryuri="${OIDC_DISCOVERY_URI}" \
-        --scope="email openid profile"
+        --scope="openid email profile"
 nextcloud:
   configs:
     custom.config.php: |
