--- a/kustomization/overlays/prod/traefik/configmap/authelia/config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia/config.yml
@@ -121,6 +121,7 @@ identity_providers:
           - code
         scopes:
           - email
+          - groups
           - openid
           - profile
         token_endpoint_auth_method: client_secret_post
