--- a/kustomization/overlays/prod/homeassistant/configmap/frigate/config.yml
+++ b/kustomization/overlays/prod/homeassistant/configmap/frigate/config.yml
@@ -47,6 +47,10 @@ cameras:
         - 0.684,0,1,0,1,0.097,0.684,0.097
         - 0.753,0.385,0.667,0.37,0.522,0.221,0.516,0,0.814,0
         - 0,0.183,0.434,0.093,0.517,0.084,0.515,0,0,0
+    objects:
+      filters:
+        person:
+          mask: 0.758,0.296,0.669,0.294,0.452,0,0.757,0
 database:
   path: /config/frigate.db
 detectors:
