--- a/kustomization/overlays/prod/generic-device-plugin/namespace.yml
+++ b/kustomization/overlays/prod/generic-device-plugin/namespace.yml
@@ -5,4 +5,4 @@ metadata:
   labels:
     pod-security.kubernetes.io/enforce: privileged
     pod-security.kubernetes.io/enforce-version: latest
-  name: generic-device-plugin
+  name: this-is-ignored-but-is-required
