--- a/kustomization/overlays/prod/redis/namespace.yml
+++ b/kustomization/overlays/prod/redis/namespace.yml
@@ -5,4 +5,6 @@ metadata:
   labels:
     pod-security.kubernetes.io/enforce: baseline
     pod-security.kubernetes.io/enforce-version: latest
-  name: redis
+    pod-security.kubernetes.io/warn: restricted
+    pod-security.kubernetes.io/warn-version: latest
+  name: this-is-ignored-but-is-required
