--- a/kustomization/overlays/prod/valheim-forerunner/namespace.yml
+++ b/kustomization/overlays/prod/valheim-forerunner/namespace.yml
@@ -7,4 +7,4 @@ metadata:
     pod-security.kubernetes.io/enforce-version: latest
     pod-security.kubernetes.io/warn: restricted
     pod-security.kubernetes.io/warn-version: latest
-  name: valheim-forerunner
+  name: this-is-ignored-but-is-required
