fix: use an emptyDir for Jellyfin's cache
They suggest this should be 100Gi, and I don't want to run that on
longhorn.

--- a/kustomization/components/jellyfin/statefulset.yml
+++ b/kustomization/components/jellyfin/statefulset.yml
@@ -44,23 +44,11 @@ spec:
             - mountPath: /cache
               name: jellyfin-cache
       priorityClassName: application
+      volumes:
+        - emptyDir:
+            sizeLimit: 100Gi
+          name: jellyfin-cache
   volumeClaimTemplates:
-    - apiVersion: v1
-      kind: PersistentVolumeClaim
-      metadata:
-        labels:
-          # Use this PVC to configure attached PVs.
-          recurring-job.longhorn.io/source: enabled
-          # Opt into the no-backup group since it can easily be recreated.
-          recurring-job-group.longhorn.io/no-backup: enabled
-        name: jellyfin-cache
-      spec:
-        accessModes:
-          - ReadWriteOnce
-        resources:
-          requests:
-            storage: 20Gi
-        storageClassName: jellyfin-cache-storageclass
     - apiVersion: v1
       kind: PersistentVolumeClaim
       metadata:
